--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXTAUTH_URL="http://localhost:3000/"
 NEXTAUTH_SECRET="Nextblog2024"
-APIURL = 'http://localhost:9000/api/v1'
+APIURL = 'https://mernblogbackend.vercel.app/api/v1'
