--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
-    "@tabler/icons-react": "^2.46.0",
+    "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
@@ -28,9 +29,11 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.5",
+    "tailwind-merge": "^2.2.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/crypto-js": "^4.2.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
